--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:34.834632Z",
-     "start_time": "2025-12-09T11:38:34.832705Z"
+     "end_time": "2025-12-09T12:41:03.084850Z",
+     "start_time": "2025-12-09T12:41:03.081853Z"
     }
    },
    "cell_type": "code",
@@ -17,15 +17,15 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.157290Z",
-     "start_time": "2025-12-09T11:38:34.837819Z"
+     "end_time": "2025-12-09T12:41:03.100415Z",
+     "start_time": "2025-12-09T12:41:03.096493Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from src.oxrivers_api.DataOrganizer import DataOrganizer\n",
+    "from src.oxrivers_api.DataCache import DataCache\n",
     "from src.oxrivers_api.loader import Loader\n",
     "from src.oxrivers_api.client import OxfordRiversClient\n",
     "from src.oxrivers_api.sites_discovery import SitesDiscovery\n",
@@ -40,13 +40,13 @@
    ],
    "id": "b2660f651d843243",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.165677Z",
-     "start_time": "2025-12-09T11:38:35.159554Z"
+     "end_time": "2025-12-09T12:41:03.117608Z",
+     "start_time": "2025-12-09T12:41:03.108400Z"
     }
    },
    "cell_type": "code",
@@ -135,13 +135,13 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.173449Z",
-     "start_time": "2025-12-09T11:38:35.168707Z"
+     "end_time": "2025-12-09T12:41:03.130075Z",
+     "start_time": "2025-12-09T12:41:03.123487Z"
     }
    },
    "cell_type": "code",
@@ -171,13 +171,13 @@
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.200698Z",
-     "start_time": "2025-12-09T11:38:35.177298Z"
+     "end_time": "2025-12-09T12:41:03.143389Z",
+     "start_time": "2025-12-09T12:41:03.137091Z"
     }
    },
    "cell_type": "code",
@@ -211,13 +211,13 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.206390Z",
-     "start_time": "2025-12-09T11:38:35.204224Z"
+     "end_time": "2025-12-09T12:41:03.152692Z",
+     "start_time": "2025-12-09T12:41:03.149719Z"
     }
    },
    "cell_type": "code",
@@ -256,22 +256,28 @@
      ]
     }
    ],
-   "execution_count": 5
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.252950Z",
-     "start_time": "2025-12-09T11:38:35.208146Z"
+     "end_time": "2025-12-09T12:41:03.282659Z",
+     "start_time": "2025-12-09T12:41:03.156893Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "from src.oxrivers_api.request_models import TimeseriesInfo\n",
+    "from src.oxrivers_api.request_models import TimeseriesInfo, DataForDateInfo\n",
     "\n",
-    "data = DataOrganizer(loader)\n",
-    "data.get_timeseries(TimeseriesInfo(wolvercote_timeseries_info[0], wolvercote_timeseries_info[1], wolvercote_timeseries_info[2]))\n",
-    "data.list_timeseries_info()"
+    "# Example usage to get and store time series data for fft in Oxford:\n",
+    "cache = DataCache(loader)\n",
+    "cache.get_timeseries(TimeseriesInfo(\"fft\", \"Oxford\"))\n",
+    "cache.get_data_for_date(DataForDateInfo(\"rainfall\", \"2022-05-05\"))\n",
+    "\n",
+    "# list contents in cache\n",
+    "print(cache.contents())\n",
+    "print(cache.get_by_key(\"fft:Oxford:None\").head())\n",
+    "print(cache.get_by_key(\"rainfall_2022-05-05\").head())"
    ],
    "id": "809f09fbccd577e1",
    "outputs": [
@@ -279,27 +285,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wolvercote_Mill_Stream\n"
+      "Oxford\n",
+      "{'fft:Oxford:None': TimeseriesInfo(datasetID='fft', siteID='Oxford', determinand=None), 'rainfall_2022-05-05': DataForDateInfo(datasetID='rainfall', date='2022-05-05')}\n",
+      "             datetime        value qualifier   id  siteID       endPoint  \\\n",
+      "0 2023-01-01 00:00:00  1010.151184      None  fft  Oxford  getTimeseries   \n",
+      "1 2023-01-01 00:15:00  1009.032837      None  fft  Oxford  getTimeseries   \n",
+      "2 2023-01-01 00:30:00  1013.774902      None  fft  Oxford  getTimeseries   \n",
+      "3 2023-01-01 00:45:00  1006.010498      None  fft  Oxford  getTimeseries   \n",
+      "4 2023-01-01 01:00:00  1002.681274      None  fft  Oxford  getTimeseries   \n",
+      "\n",
+      "  determinand determinand_label determinand_unit  \n",
+      "0        None              None             None  \n",
+      "1        None              None             None  \n",
+      "2        None              None             None  \n",
+      "3        None              None             None  \n",
+      "4        None              None             None  \n",
+      "     datetime  value     id\n",
+      "0  2022-05-05   0.01  39001\n",
+      "1  2022-05-05   0.02  39002\n",
+      "2  2022-05-05   0.00  39003\n",
+      "3  2022-05-05   0.00  39004\n",
+      "4  2022-05-05   0.00  39005\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'ea_bathing_water:Wolvercote_Mill_Stream:Escherichia_coli_(EC)': TimeseriesInfo(datasetID='ea_bathing_water', siteID='11946', determinand='EC')}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
-   "execution_count": 6
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T11:38:35.263558Z",
-     "start_time": "2025-12-09T11:38:35.262387Z"
+     "end_time": "2025-12-09T12:41:03.291622Z",
+     "start_time": "2025-12-09T12:41:03.290373Z"
     }
    },
    "cell_type": "code",
