--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -25,7 +25,7 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from src.oxrivers_api.DataCache import DataCache\n",
+    "from src.oxrivers_api.data_cache import DataCache\n",
     "from src.oxrivers_api.loader import Loader\n",
     "from src.oxrivers_api.client import OxfordRiversClient\n",
     "from src.oxrivers_api.sites_discovery import SitesDiscovery\n",
