Deleting unnecessary files and restructuring.
There are no real functional changes here - just getting ready for it to
be more usable.

--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -26,8 +26,8 @@
     "from pathlib import Path\n",
     "\n",
     "from src.oxrivers_api.data_cache import DataCache\n",
-    "from src.oxrivers_api.loader import Loader\n",
-    "from src.oxrivers_api.client import OxfordRiversClient\n",
+    "from src.oxrivers_api.data_loaders.json_to_pandas import JsonToPandas\n",
+    "from src.oxrivers_api.api_to_json import APIToJson\n",
     "from src.oxrivers_api.sites_discovery import SitesDiscovery\n",
     "from src.oxrivers_api.determinands_discovery import DeterminandsDiscovery\n",
     "\n",
@@ -35,8 +35,8 @@
     "data_dir: Path = Path(\"../data\")\n",
     "\n",
     "# set up Oxford Rivers Client and Pandas loader\n",
-    "client = OxfordRiversClient(data_dir)\n",
-    "loader = Loader(client)"
+    "client = APIToJson(data_dir)\n",
+    "loader = JsonToPandas(client)"
    ],
    "id": "b2660f651d843243",
    "outputs": [],
@@ -267,7 +267,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.oxrivers_api.request_models import TimeseriesInfo, DataForDateInfo\n",
+    "from src.oxrivers_api.models.request_models import TimeseriesInfo, DataForDateInfo\n",
     "\n",
     "# Example usage to get and store time series data for fft in Oxford:\n",
     "cache = DataCache(loader)\n",
