Make client take storage instead of data directory.

--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:49.510355Z",
-     "start_time": "2025-12-09T13:55:49.508980Z"
+     "end_time": "2025-12-09T14:08:59.449557Z",
+     "start_time": "2025-12-09T14:08:59.447655Z"
     }
    },
    "cell_type": "code",
@@ -16,8 +16,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:49.961649Z",
-     "start_time": "2025-12-09T13:55:49.513145Z"
+     "end_time": "2025-12-09T14:08:59.801860Z",
+     "start_time": "2025-12-09T14:08:59.452718Z"
     }
    },
    "cell_type": "code",
@@ -31,12 +31,14 @@
     "import matplotlib\n",
     "\n",
     "from src.oxrivers_api.api_to_json import APIToJson\n",
+    "from src.oxrivers_api.storage.json_storage import LocalJsonStorage\n",
     "\n",
     "# choose where to store json locally\n",
     "data_dir: Path = Path(\"../data\")\n",
     "\n",
     "# set up Oxford Rivers Client and Pandas loader\n",
-    "client = APIToJson(data_dir)\n",
+    "storage = LocalJsonStorage(data_dir)\n",
+    "client = APIToJson(storage)\n",
     "loader = JsonToPandas(client)\n",
     "\n",
     "# Example usage to get and store time series data for fft in Oxford:\n",
@@ -67,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:49.973105Z",
-     "start_time": "2025-12-09T13:55:49.966578Z"
+     "end_time": "2025-12-09T14:08:59.817907Z",
+     "start_time": "2025-12-09T14:08:59.810668Z"
     }
    },
    "cell_type": "code",
@@ -271,8 +273,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:50.164667Z",
-     "start_time": "2025-12-09T13:55:49.978460Z"
+     "end_time": "2025-12-09T14:09:00.000190Z",
+     "start_time": "2025-12-09T14:08:59.824419Z"
     }
    },
    "cell_type": "code",
@@ -309,8 +311,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:50.170076Z",
-     "start_time": "2025-12-09T13:55:50.166770Z"
+     "end_time": "2025-12-09T14:09:00.005797Z",
+     "start_time": "2025-12-09T14:09:00.002446Z"
     }
    },
    "cell_type": "code",
@@ -435,8 +437,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-12-09T13:55:50.177079Z",
-     "start_time": "2025-12-09T13:55:50.175082Z"
+     "end_time": "2025-12-09T14:09:00.012697Z",
+     "start_time": "2025-12-09T14:09:00.010698Z"
     }
    },
    "cell_type": "code",
