--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -24,13 +24,13 @@
    "source": [
     "from src.oxrivers_api.models.request_models import TimeseriesInfo, DataForDateInfo\n",
     "from src.oxrivers_api.data_cache import DataCache\n",
-    "from src.oxrivers_api.data_loaders.json_to_pandas import JsonToPandas\n",
+    "from src.oxrivers_api.data_loaders.json_to_pandas_loader import JsonToPandasLoader\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "\n",
     "import matplotlib\n",
     "\n",
-    "from src.oxrivers_api.api_to_json import APIToJson\n",
+    "from src.oxrivers_api.api_to_json_client import APIToJson\n",
     "from src.oxrivers_api.storage.json_storage import LocalJsonStorage\n",
     "\n",
     "# choose where to store json locally\n",
@@ -39,7 +39,7 @@
     "# set up Oxford Rivers Client and Pandas loader\n",
     "storage = LocalJsonStorage(data_dir)\n",
     "client = APIToJson(storage)\n",
-    "loader = JsonToPandas(client)\n",
+    "loader = JsonToPandasLoader(client)\n",
     "\n",
     "# Example usage to get and store time series data for fft in Oxford:\n",
     "cache = DataCache(loader)\n",
