Fix imports for library.

--- a/src/demo.ipynb
+++ b/src/demo.ipynb
@@ -22,16 +22,16 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.oxrivers_api.models.request_models import TimeseriesInfo, DataForDateInfo\n",
-    "from src.oxrivers_api.data_cache import DataCache\n",
-    "from src.oxrivers_api.data_loaders.json_to_pandas_loader import JsonToPandasLoader\n",
+    "from oxrivers_api.models.request_models import TimeseriesInfo, DataForDateInfo\n",
+    "from oxrivers_api.data_cache import DataCache\n",
+    "from oxrivers_api.data_loaders.json_to_pandas_loader import JsonToPandasLoader\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "\n",
     "import matplotlib\n",
     "\n",
-    "from src.oxrivers_api.api_to_json_client import APIToJson\n",
-    "from src.oxrivers_api.storage.json_storage import LocalJsonStorage\n",
+    "from oxrivers_api.api_to_json_client import APIToJson\n",
+    "from oxrivers_api.storage.json_storage import LocalJsonStorage\n",
     "\n",
     "# choose where to store json locally\n",
     "data_dir: Path = Path(\"../data\")\n",
